--- a/custom-pshelpdesk.css
+++ b/custom-pshelpdesk.css
@@ -156,7 +156,7 @@ body, html {
 .sub-heading-list ul{
     list-style-type:disc;
     color: rgb(255, 255, 255);
-    padding-left:20px!important;
+    padding-left: 20px!important;
     margin-top:10px;
     margin-bottom:0!important
 }
@@ -168,7 +168,6 @@ body, html {
     color: rgba(255, 255, 255, 0.502);
     line-height: 1.538;
     padding:25px 0px 20px 0px;
-    
     width:70%;
 }
 
@@ -264,6 +263,11 @@ body, html {
 /*Respnsive Media Queries Start from Here*/
 
 @media (min-width:992px) and (max-width:1024px){
+    
+    .header2 .row{
+        display:flex!important;
+        align-items: center;
+    }
     .productfamilyheader.minify-header{
         margin-top:0!important;
     }
@@ -305,23 +309,28 @@ body, html {
 
 @media (max-width:991px){
     
+    .container{
+        margin:auto;
+        padding-right:20px;
+        padding-left:20px;
+    }
     .productfamilyheader.minify-header{
         margin-top:0!important;
     }
     #mainHeading{
         margin-top:10px!important;
-
+        font-size: 28px!important;
     }
     
     .sub-heading-list ul{
         list-style-type: none;
-        padding-left:auto!important;
+        padding-left: 5px!important;
+    padding-right: 5px!important;
     }
     .sub-heading-list li{
         padding-bottom:20px;
     }
-    
-    
+
     .helpdesk-head{
         height:auto!important;
     }
